# numsTest

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  tests.cpp  whattotest.cpp
